Fixing overflow-y in chat panel

--- a/resources/sass/chat.scss
+++ b/resources/sass/chat.scss
@@ -543,7 +543,7 @@ body {
     height: auto;
     min-height: calc(100% - 93px);
     max-height: calc(100% - 93px);
-    overflow-y: scroll;
+    overflow-y: auto;
     overflow-x: hidden;
  }
  @media screen and (max-width: 735px) {
